# jellyV2

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake
App/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  install_manifest.txt
App/.cmake/api/v1/reply/: cache-v2-03a5ad973591329582ac.json  cmakeFiles-v1-2f5794742b2e14ee71d5.json  codemodel-v2-9322acf87be3edd5f8ca.json  directory-.-Debug-a42b0130528328f69702.json  directory-lib.jelly-Debug-750bb4e21febfc566cf8.json  directory-lib.jelly.libs.glfw-Debug-7738f3e58154754c71ef.json  directory-lib.jelly.libs.glfw.src-Debug-ce558af1d3714aa462bb.json  directory-lib.jelly.libs.glm-Debug-5ef45766f90490fbfc64.json  directory-lib.jelly.libs.glm.glm-Debug-ee4dbca1c7074fd3f455.json  index-2024-02-22T04-43-30-0002.json  target-glfw-Debug-99e5bab5a1cff8c89f25.json  target-glm-Debug-80d549e063202508c16c.json  target-jelly-Debug-172053ff5ff13742da20.json  target-jellyApp-Debug-b23ca89764dc7c1d3927.json  target-uninstall-Debug-71eb5f7c42abb58d8ce2.json  target-update_mappings-Debug-b39a4c07df12f047688f.json  toolchains-v1-9c154dc69522a2fe8147.json
App/lib/jelly/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
App/lib/jelly/Include/jelly/: jelly.hpp
App/lib/jelly/cmake/: JellyConfig.cmake  jellyConfig.cmake.in
App/lib/jelly/libs/glfw/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
App/lib/jelly/libs/glfw/examples/: cmake_install.cmake
App/lib/jelly/libs/glfw/src/: Makefile  cmake_install.cmake  glfw3.pc
App/lib/jelly/libs/glfw/tests/: cmake_install.cmake
App/lib/jelly/src/: core.cpp
App/src/: app.cpp  main.cpp
Core/: CMakeLists.txt  cmake_install.cmake
